--- a/Coursework/Coursework/public/stylesheets/author.css
+++ b/Coursework/Coursework/public/stylesheets/author.css
@@ -80,3 +80,39 @@
         font-size: 14px;
         margin-bottom: 30px;
     }
+
+@media only screen and (min-width: 700px) {
+    .speaker-form-header,
+    .speaker-form {
+        width: 100%;
+        min-height: 1000px;
+    }
+
+    .form-row {
+        flex-direction: row;
+        align-items: flex-start; /* To avoid stretching */
+        margin-bottom: 20px;
+    }
+
+        .form-row input[type='text'],
+        .form-row input[type='email'],
+        .form-row select,
+        .form-row textarea {
+            width: 250px;
+            height: initial;
+        }
+
+        .form-row label {
+            text-align: center;
+            width: 120px;
+            margin-top: 7px;
+            padding-right: 20px;
+        }
+
+        .form-row input[type='text']:invalid,
+        .form-row input[type='email']:invalid {
+            border: 1px solid #D55C5F;
+            color: #D55C5F;
+            box-shadow: none; /* Remove default red glow in Firefox */
+        }
+}
