--- a/Coursework/Coursework/public/stylesheets/main.css
+++ b/Coursework/Coursework/public/stylesheets/main.css
@@ -15,10 +15,9 @@ a:visited  {
 }
 
     a:hover,
-    a:visited:hover
-    {
+    a:visited:hover {
         color: #76AEED;
-        border-bottom: 1px solid #76AEED;
+        border-bottom: 1px solid #5995DA;
     }
 
 a:active,
@@ -40,7 +39,6 @@ a:visited:active code {
 }
 
 .button-link {
-   
     background: none;
     text-decoration: none;
     border: none;
@@ -54,14 +52,14 @@ a:visited:active code {
     .button-link:hover,
     .button-link:visited:hover {
         color: #76AEED;
-        border-bottom: 1px solid #76AEED;
+        border-bottom: 1px solid #5995DA;
     }
 
-    
+
 
 body {
-    /*color: #5D6063;
-    background-color: #EAEDF0; */
+    /*color: #5D6063; */
+    background-color: #FFFFFF;
     font-family: "Helvetica", "Arial", sans-serif;
     font-size: 16px;
     line-height: 1.3;
@@ -72,7 +70,7 @@ body {
 
 .page {
     /* Gradient page background */
-    background-color: #F9FAFB;
+    background-color: #FFFFFF;
     background: -webkit-linear-gradient(bottom, #F9FAFB 0%, #FFFFFF 100%);
     background: linear-gradient(to top, #F9FAFB 0%, #FFFFFF 100%);
     background-repeat: no-repeat;
@@ -226,9 +224,9 @@ body {
     display: block
 }
 
-    .sidebar a{
+    .sidebar a {
         display: block;
-        color: #5D6063;
+        /*color: #5D6063;*/
         padding: 16px;
         text-decoration: none;
         font-weight: bold;
@@ -236,7 +234,6 @@ body {
 
         .sidebar a:hover {
             background-color: #D6E9FE;
-           
         }
 
 .content-grid {
@@ -265,47 +262,17 @@ body {
     height: 200px;
     width: 200px;
 }
-/*table {
-    display: inline;
-    background-color: aqua;
+
+.button-link{
+    text-align: center;
 }
-
-ul {
-    display: block;
-    list-style-type: circle;
-    background-color:aquamarine;
-}
-
-li{
-    background-color: antiquewhite;
-    display: table;
-    width: auto;
-} */
-.call-to-action {
-    font-style: italic;
-    background-color: #EEB75A; /* Yellow */
-}
-    .call-to-action:link,
-    .call-to-action:visited {
-        font-style: italic;
-        background-color: #EEB75A; /* Yellow */
-    }
-
-        .call-to-action:hover,
-        .call-to-action:visited:hover {
-            background-color: #F5CF8E; /* Light yellow */
-        }
-
-        .call-to-action:active,
-        .call-to-action:visited:active {
-            background-color: #EEB75A; /* Yellow */
-        }
-
 .button:link,
-.button:visited {
+.button:visited,
+.button-link:link,
+.button-link:visited {
     text-decoration: none;
     color: #FFF;
-    background-color: #5995DA;
+    background-color: #FF8E00;
     font-weight: bold;
     padding: 20px;
     text-align: center;
@@ -315,8 +282,12 @@ li{
     margin: 20px auto;
 }
 
+
+
     .button:hover,
-    .button:visited:hover {
+    .button:visited:hover,
+    .button-link :hover,
+    .button-link:visited:hover {
         color: #FFF;
-        background-color: #76AEED; /* Light blue */
+        background-color: #FF8E00; /* Light blue */
     }
