--- a/Coursework/Coursework/views/Main.pug
+++ b/Coursework/Coursework/views/Main.pug
@@ -1,45 +1,19 @@
 ﻿extends layout
+block links
+	link(rel='stylesheet', href='/stylesheets/main.css')
+block scripts 
+	script(src='/ajax.js') 
+	script(src='/images.js') 
 
 block content
 	
 	body
-	div(class='page')
-		div(class='menu-container')
-
-			div(class='menu')
-				div(class='date') 
-					a(href='/') Aug 14, 2019
-				div(class='cart')
-					a(href='/cart') Cart
-				div(class='orders')
-					a(href='/orders') Orders
-				if id == 1
-					div(class='signup')
-						a(href='/registration') SignUp
-					div(class='login') 
-						a(href='/authorization') LogIn
-				else
-					div(class='user-links')
-						div(class='signup') Welcome #{id}
-						form(action='/' method='post' class='logout')
-							input(type='hidden' name='button-submit' id='button-submit')
-							button(class='button-link') Logout
-			
-		div(class='header-container')
-			div(class='header')
-				div(class='subscribe') Subscribe &#9662;
-				
-				div(class='logo')
-					p Книжный магазин, который удивит
-				div(class='social')
-		form(class='search-form' action='/' method='post')
-			input(id='request' name='request' type='text')
-			button Submit
+		
 		div(class='content-grid-container')
 			div(class='sidebar') 
 				each genre in genres
 					li 
-						a(href ='/') #{genre.name} 
+						a(href='/take_all_book_from_genre/' + genre.id_genre) #{genre.name} 
 			div(class='content-grid')
 				-for(var x = 0; x < books.length; x++)
 					div(class='book-grid')
