--- a/Coursework/Coursework/views/book.pug
+++ b/Coursework/Coursework/views/book.pug
@@ -1,68 +1,38 @@
-﻿doctype html
-html
-	head
-		title=title
-		link(rel='stylesheet', href='/stylesheets/main.css')
-		link(rel='stylesheet', href='/stylesheets/book.css')
-		<meta charset='UTF-8'>
-		script(src='/image.js')
-		block content
-			body
-			div(class='page')
-				div(class='menu-container')
-					div(class='menu')
-						div(class='date') 
-							a(href='/') Aug 14, 2019
-						div(class='cart')
-							a(href='/cart') Cart
-						div(class='orders')
-							a(href='/orders') Orders
-						if id == 1
-							div(class='signup')
-								a(href='/registration') SignUp
-							div(class='login') 
-								a(href='/authorization') LogIn
-						else
-							div(class='user-links')
-								div(class='signup') Welcome #{id}
-								form(action='/' method='post' class='logout')
-									input(type='hidden' name='button-submit' id='button-submit')
-									button(class='button-link') Logout
-				div(class='header-container')
-					div(class='header')
-						div(class='subscribe') Subscribe &#9662;
-						div(class='logo')
-							p Книжный магазин, который удивит
-						div(class='social')
-				form(class='search-form' action='/' method='post')
-					input(id='request' name='request' type='text')
-					button Submit
-				div(class='content-grid-container')
-					div(class='content-sidebar-image')
-						div(class='image')
-							img(id='book_image')
-					div(class='content-grid')
-						h2 #{book[0]['name_book']}
-						div(class='content-grid-cell')
-							div(class='content-grid-cell-shell')
-								div(class='content-grid-cell-top') Название
-								div(class='content-grid-cell-bottom') #{book[0]['name_book']}
-						div(class='content-grid-cell')
-							div(class='content-grid-cell-shell')
-								div(class='content-grid-cell-top') Цена
-								div(class='content-grid-cell-bottom') #{book[0]['price']}
-						div(class='content-grid-cell')
-							div(class='content-grid-cell-shell')
-								div(class='content-grid-cell-top') Год издания
-								div(class='content-grid-cell-bottom') #{book[0]['year_book']}
-						div(class='content-grid-cell')
-							div(class='content-grid-cell-shell')
-								div(class='content-grid-cell-top') Количество страниц
-								div(class='content-grid-cell-bottom')  #{book[0]['quantity']}
-						div(class='content-grid-cell')
-							div(class='content-grid-cell-shell')
-								div(class='content-grid-cell-top') Описание
-								div(class='content-grid-cell-bottom description') #{book[0]['description_book']}
-					div(class='button-container')
-						div(class='button-cell') 
-							a(href='/') Добавить в корзину
+﻿extends layout.pug
+block links
+	link(rel='stylesheet', href='/stylesheets/main.css')
+	link(rel='stylesheet', href='/stylesheets/book.css')
+block scripts
+	script(src='/image.js')
+	script(src='/ajax.js')
+
+block content
+	body
+	div(class='content-grid-container')
+		div(class='content-sidebar-image')
+			div(class='image')
+				img(id='book_image')
+		div(class='content-grid')
+			h2 #{book[0]['name_book']}
+			div(class='content-grid-cell')
+				div(class='content-grid-cell-shell')
+					div(class='content-grid-cell-top') Название
+					div(class='content-grid-cell-bottom') #{book[0]['name_book']}
+			div(class='content-grid-cell')
+				div(class='content-grid-cell-shell')
+					div(class='content-grid-cell-top') Цена
+					div(class='content-grid-cell-bottom') #{book[0]['price']}
+			div(class='content-grid-cell')
+				div(class='content-grid-cell-shell')
+					div(class='content-grid-cell-top') Год издания
+					div(class='content-grid-cell-bottom') #{book[0]['year_book']}
+			div(class='content-grid-cell')
+				div(class='content-grid-cell-shell')
+					div(class='content-grid-cell-top') Количество страниц
+					div(class='content-grid-cell-bottom')  #{book[0]['quantity']}
+			div(class='content-grid-cell')
+				div(class='content-grid-cell-shell')
+					div(class='content-grid-cell-top') Описание
+					div(class='content-grid-cell-bottom description') #{book[0]['description_book']}
+		div(class='button-container')
+			button(class='button-link' onclick='add_book_to_cart_click(' + book[0]['id'] + ')') Добавить в корзину
