--- a/Coursework/Coursework/views/pay.pug
+++ b/Coursework/Coursework/views/pay.pug
@@ -1,46 +1,19 @@
-﻿doctype html
-html
-	head
-		title=title
-		
+﻿extends layout.pug
+
+block links
 		link(rel='stylesheet', href='/stylesheets/author.css')
 		link(rel='stylesheet', href='/stylesheets/main.css')
+		
+block scripts
 		script(src='/ajax.js')
-		<meta charset='UTF-8'>
+		
+block content
 	body
-		block content
-			body
-			div(class='page')
-				div(class='menu-container')
-					div(class='menu')
-						div(class='date') 
-							a(href='/') Aug 14, 2019
-						div(class='cart')
-							a(href='/cart') Cart
-						div(class='orders')
-							a(href='/orders') Orders
-						if id == 1
-							div(class='signup')
-								a(href='/registration') SignUp
-							div(class='login') 
-								a(href='/authorization') LogIn
-						else
-							div(class='user-links')
-								div(class='signup') Welcome #{id}
-								form(action='/' method='post' class='logout')
-									input(type='hidden' name='button-submit' id='button-submit')
-									button(class='button-link') Logout
-				div(class='header-container')
-					div(class='header')
-						div(class='subscribe') Subscribe &#9662;
-						div(class='logo')
-							p Книжный магазин, который удивит
-						div(class='social')
-				div(class='speaker-form')
-						div(class='form-row')
-							p Платить столько: #{result}
-							// ссылка на главную
-							button(onclick = 'update_date_of_pay('+ cart_id + ')' ) Оплатить
+		div(class='speaker-form') 
+			label(for='my_button') К оплате: #{result}
+			a(href='/pay_pay/'+ cart_id class='button-link' id='my_button') Оплатить
+
+		
 						
 
 
